# STR_trabalho2

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  liveplot.gnuplot
lib/: Makefile  Makefile.am  Makefile.in  asciiplay.h  e6.patch  libasciiplay.la  originalPlay.c  play.c  play.lo
lib/.deps/: play.Plo
lib/.libs/: libasciiplay.la  libasciiplay.lai  libasciiplay.so.0  libasciiplay.so.0.0.0
scenes/: Makefile  Makefile.am  Makefile.in  scene-0.txt  scene-1.txt  scene-2.txt  scene-3.txt  scene-4.txt  scene-5.txt  scene-6.txt  scene-7.txt
src/: Makefile  Makefile.am  Makefile.in  asciiplay  asciiplay.c  forkn  forkn.c  log.txt  utils.c  utils.h
src/.deps/: asciiplay-asciiplay.Po  asciiplay-utils.Po  forkn.Po
src/.libs/: asciiplay  lt-asciiplay
